style.css
*
{
    margin: 0;
    padding: 0;
    box-sizing:border-box;
}
body{
    background-image:url('images/film-grain.gif');
    background-repeat:repeat;
    font-family: Monospace;
}


/*
    CSS for the menu bar
 */
.top-bar
{
    background-color: rgba(0, 0, 0,0.5);
    height: 90px;
}
.logo{
    position: absolute;
}
.logo a{
    cursor: grab;
}
.menu{
    list-style-type: none;
    margin: 0;
    padding: 16px;
    overflow: hidden;
    width: 75%;
    float: right;
}
.menu li{
    float: right;
    margin: 10px 5px;
}
.menu li a{
    display: block;
    color: white;
    text-align: center;
    padding: 6px 8px;
    text-decoration: none;
    border: 1px solid #fff;
    font-size: x-large;
    letter-spacing: 2px;
}
.menu li a:hover
{
    background: #fff;
    transition: .3s;
    color: #000;
}
.icon{
    display: none;
}
.dropdown-content{
    display: none;
}



.about{
    padding: 30px;
}
/* Create two unequal columns that floats next to each other */
/* Left column */
.leftColumn {
    float: left;
    width: 75%;
}
/* Right column */
.rightColumn {
    float: left;
    width: 25%;
    padding-left: 20px;
}
/* Fake image */
.fakeimg {
    background-color: #aaa;
    width: 100%;
    padding: 20px;
    
}
.social img{
    height: 100%;
    width:23%;
}
.books img{
    height: 200px;
}
/* Add a card effect for articles */
.card {
    background-color: white;
    padding: 20px;
    margin-top: 20px;
    animation: fadeIn ease 2s;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}
/* Clear floats after the columns */
.row:after {
    content: "";
    display: table;
    clear: both;
}





/*
   styling for the contact page. and further information about contributors.
 */
.contactContainer{
    padding: 2px 16px;
}
.kevinInfo{
    text-align: left;
    margin-top: 160px;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    padding: 30px;
    width: 40%;
    background-color: white;
    animation: fadeIn ease 2s;
}
.carterInfo{
    text-align: left;
    margin-top: 30px;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    padding: 30px;
    width: 40%;
    background-color: white;
    animation: fadeIn ease 4s;
}
.kevinInfo:hover{
    box-shadow: 0 12px 24px 0 rgba(0,0,0,0.2);
}
.carterInfo:hover{
    box-shadow: 0 12px 24px 0 rgba(0,0,0,0.2);
}




/*
    CSS for the Index page
 */
.welcome
{
    position: relative;
    text-align: left;
    color: #000;
    top: 160px;
}
.welcome h1
{
    font-size: 42px;
    margin: 25px;
}
@media screen and (min-width:750px){
    .logoMobile{
        display:none;
    }
}
.indexBtn
{
    font-size: 18px;
    letter-spacing: 2px;
    margin: 5px;
    padding: 7px 10px;
    text-decoration: none;
    border: 1px solid #fff;
}
.indexBtn:hover
{
    background: #000;
    transition: .3s;
    color: #fff;		    
}
.contact
{
    background: #fff;
    color: #000;
}
.shop
{
    background: #fff;
    color: #000;
}



/*CSS for paintings page*/
.grid{
    text-align: center;
    padding: 32px;
}
.row {
    display: -ms-flexbox; /* IE 10 */
    display: flex;
    -ms-flex-wrap: wrap; /* IE 10 */
    flex-wrap: wrap;
    padding: 0 4px;
    max-width: 1000px;
    margin: auto;
}
/* Create two equal columns that sits next to each other */
.column {
    -ms-flex: 25%; /* IE 10 */
    flex: 25%;
    padding: 0 4px;
    position: relative;
}
.column img {
    margin-top: 8px;
    vertical-align: middle;
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}
.column img:hover{
    opacity: 0.7;
}
.column h1{
    background: rgb(0, 0, 0);
    background: rgba(0, 0, 0, 0.3); /* Black see-through */
    transition: .5s ease;
    opacity: 0;
    color: white;
    font-size: 20px;
    padding: 20px;
    text-align: center;
    vertical-align: middle;
    position: absolute;
}
.column:hover h1{
    opacity: 1;
}
.gridBtn{
    border: none;
    outline: none;
    padding: 10px 16px;
    background-color: white;
    cursor: pointer;
    font-size: 18px;
    color:black;
}
.gridBtn:hover{
    background: #000;
    transition: .3s;
    color: #fff;
}
.gridBtn.active{
    background: black;
    color:white;
}
/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
}
/* Modal Content (image) */
.modal-content {
    margin: auto;
    display: block;
    width: 80%;
    max-width: 700px;
}
/* Caption of Modal Image */
#caption {
    margin: auto;
    display: block;
    width: 80%;
    max-width: 700px;
    text-align: center;
    color: #ccc;
    padding: 10px 0;
    height: 150px;
}
/* Add Animation */
.modal-content, #caption {
    -webkit-animation-name: zoom;
    -webkit-animation-duration: 0.6s;
    animation-name: zoom;
    animation-duration: 0.6s;
}
/* The Close Button */
.close {
    position: absolute;
    top: 15px;
    right: 35px;
    color: #f1f1f1;
    font-size: 40px;
    font-weight: bold;
    transition: 0.3s;
}
.close:hover,
.close:focus {
    color: #bbb;
    text-decoration: none;
    cursor: pointer;
}
/*prev and next buttons */
.prev, .next{
   cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    padding: 16px;
    margin-top: -22px;
    color: white;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
}
.next{
    right: 0;
    border-radius: 3px 0 0 3px;
}
.prev:hover, .next:hover{
    background-color:white;
    color:black;
}
#topBtn{
    display: none;
    position: fixed;
    border: black;
    bottom: 20px;
    right: 30px;
    z-index: 99;
    font-size: 18px;
    border: none;
    outline: none;
    background-color: white;
    color: black;
    cursor: pointer;
    padding: 15px;
    border-radius: 4px;
}
#topBtn:hover{
    background: #000;
    transition: .3s;
    color: #fff;
}




/*
    CSS for the Reads page
 */
.choicePanel{
    max-width: 1000px;
    margin: auto;
    padding-top: 80px;
}
.workSelection{
    width: 20%;
    height: 100px;
    float: left;
    font-size: 20px;
    padding-left: 10px;
}
.workSelection select{
    width: 150px;
    padding: 5px 35px 5px 5px;
    font-size: 16px;
    border: 1px solid black;
    -webkit-appearance: none;
    -moz-appearance: none;
}
.iFrameSelection{
    margin-left: 20%;
    height: 500px;
}

.iFrameSelection iframe{
    width: 100%;
    height: 500px;
    border: none;
    font-size: 40px;
}




/*Gallery page css */
.GalleryPage{
    max-width: 1000px;
    margin: auto;
    padding-top: 80px;
}
.galleryPage h1{
    font-size: 50px;
    word-break: break-all;
}
.galleryRow{
    margin: 10px -16px;
    animation: fadeIn ease 2s;
}
/*add padding between each column */
.galleryRow,.galleryRow > .galleryColumn{
    padding: 8px
}
/*creates three equal columns that floats next to each other*/
.galleryColumn{
    float: left;
    width: 33.33%;
    display: none; /*hide everything by default*/
}
/*clear floats after row*/
.galleryRow:after{
    content: "";
    display: table;
    clear: both;
}
/*gallery */
.gallery{
    background-color:white;
    padding: 10px;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}
.show{
    display: block;
}
.galleryBtn{
    border: none;
    outline: none;
    padding: 12px 16px;
    background-color: white;
    cursor: pointer;
}
.galleryBtn:hover{
    background-color: #ddd;
}
.galleryBtn.active{
    background-color: #666;
    color: white;
}


/*  support for other browsers. here for reference
    -webkit-animation: fadeIn ease 10s;
    -moz-animation: fadeIn ease 10s;
    -o-animation: fadeIn ease 10s;*/
@keyframes fadeIn{
    0%{
        opacity: 0;
    }
    100%{
        opacity: 1;
    }
}
@-webkit-keyframes zoom {
    from {-webkit-transform:scale(0)}
    to {-webkit-transform:scale(1)}
}
@keyframes zoom {
    from {transform: scale(0)}
    to {transform: scale(1)}
}



/*
    CSS for Mobile
 */
@media screen and (max-width: 750px)
{
    /*index page*/
    .welcome h1{
        display:none;
    }
    .indexBtn{
        margin-left: 20%;
        
    }
    .logoMobile{
        display: block;
        margin-left: auto;
        margin-right: auto;
        width: 40%;
    }

    /*contact page*/
    .kevinInfo{
        margin-top: 50px;
        width: 100%;
        text-align: center;
    }
    .carterInfo{
        width: 100%;
        text-align: center;
    }

    /*top bar navigation*/
    .menu{
        display: none;
    }
    .icon{
        display: block;
        width: 100%;
        border: none;
        background: black;
        color:white;
        font-size: 45px;
        cursor: pointer;
        text-align: center;
    }
    .icon:hover{
        background-color: rgba(0,0,0,0.9);
    }
    .dropdown-content{
        display: none;
        position: absolute;
        width: 100%;
        background-color: black;
        min-width: 160px;
        color: white;
        cursor: pointer;
        text-align: center;
        z-index: 1;
        transition: display 2s;
    }
    .dropdown-content a{
        color: white;
        padding: 12px, 16px;
        display: block;
        text-decoration: none;
        font-size: xx-large;
        letter-spacing: 2px;
    }
    .dropdown-content a:hover{
        background-color: rgba(0,0,0,0.9);
    }
    .show{
        display: block;
    } 
    .top-bar{
        overflow: hidden; 
        background-color: transparent;

    }
    .top-bar ul{
        display: none;
    }
    .top-bar img{
        display: none;
    }


    /*gallery page*/
    .galleryBtn{
        margin-left: 10px;
    }

    /*written works & readings pages*/
    .choicePanel{
        width: 100%;
        text-align: center;
    }
    .workSelection{
        width: 100%;
        text-align: center;
    }
    .iFrameSelection{
        clear: left;
        margin-left: 0;
        width: 100%;
        text-align: center;

    }

    /*about page*/
    .leftColumn, .rightColumn{
        width: 100%;
        padding: 0;
    }
    .social img{
        height:100%;
    }
    .books img{
        width: auto;
        margin-left: 10%;
    }

}

